--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "coin-jar",
+  "name": "example-0.5.0",
   "version": "0.0.0",
-  "description": "JP's Swear Jar",
+  "description": "SakuraApi Awesome Sauce",
   "author": "daniel",
   "license": "BSD-3-Clause",
   "scripts": {
@@ -10,28 +10,25 @@
     "docker:local-compose-down": "docker-compose --file docker/local-test.yml down",
     "docker:local-compose-up": "scripts/docker:local-compose-up.sh",
     "install": "chmod u+x scripts/*.sh || true ; scripts/install.sh",
+    "lint": "scripts/lint.sh",
     "start": "scripts/start.sh",
     "test": "scripts/test.sh",
     "test:db": "scripts/test:db.sh"
   },
   "dependencies": {
-    "@sakuraapi/api": "0.7.1",
-    "@sakuraapi/auth-audience": "0.2.4",
-    "@sakuraapi/auth-native-authority": "0.3.0-11",
+    "@sakuraapi/api": "0.8.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "colors": "^1.1.2",
     "cors": "^2.8.3",
     "debug": "^3.1.0",
     "ejs": "^2.5.6",
-    "email-templates": "^3.2.0",
     "encodeurl": "^1.0.1",
     "express": "^4.15.2",
     "helmet": "^3.6.0",
     "moment": "^2.18.1",
     "mongodb": "^2.2.26",
     "node-sass": "^4.5.3",
-    "nodemailer": "^4.0.1",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
     "rxjs": "^5.4.2",
@@ -47,12 +44,11 @@
     "@types/debug": "0.0.30",
     "@types/deep-diff": "0.0.31",
     "@types/ejs": "^2.3.33",
-    "@types/email-templates": "^3.1.0",
     "@types/express": "^4.0.35",
     "@types/jasmine": "^2.5.45",
     "@types/jsonwebtoken": "^7.2.2",
     "@types/mongodb": "^2.2.3",
-    "@types/node": "^8.0.7",
+    "@types/node": "^9.3.0",
     "@types/node-sass": "^3.10.32",
     "@types/nodemailer": "^4.3.1",
     "@types/request-promise-native": "^1.0.6",
