--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:db": "scripts/test:db.sh"
   },
   "dependencies": {
-    "@sakuraapi/api": "0.8.1",
+    "@sakuraapi/core": "^0.10.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "colors": "^1.1.2",
