--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "test:db": "scripts/test:db.sh"
   },
   "dependencies": {
-    "@sakuraapi/api": "0.7.1",
-    "@sakuraapi/auth-audience": "0.2.4",
-    "@sakuraapi/auth-native-authority": "0.3.0-11",
-    "bcrypt": "^1.0.2",
+    "@sakuraapi/auth-audience": "^0.3.3",
+    "@sakuraapi/auth-native-authority": "^0.4.0",
+    "@sakuraapi/core": "0.17.3",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.17.1",
     "colors": "^1.1.2",
     "cors": "^2.8.3",
@@ -28,8 +28,9 @@
     "encodeurl": "^1.0.1",
     "express": "^4.15.2",
     "helmet": "^3.6.0",
+    "isemail": "^3.1.3",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.26",
+    "mongodb": "^3.1.1",
     "node-sass": "^4.5.3",
     "nodemailer": "^4.0.1",
     "request": "^2.81.0",
@@ -51,7 +52,7 @@
     "@types/express": "^4.0.35",
     "@types/jasmine": "^2.5.45",
     "@types/jsonwebtoken": "^7.2.2",
-    "@types/mongodb": "^2.2.3",
+    "@types/mongodb": "^3.1.2",
     "@types/node": "^8.0.7",
     "@types/node-sass": "^3.10.32",
     "@types/nodemailer": "^4.3.1",
@@ -65,7 +66,7 @@
     "jasmine": "^2.6.0",
     "jasmine-reporters": "^2.2.1",
     "jasmine-spec-reporter": "^4.1.1",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.3.0",
     "nodemon": "^1.11.0",
     "nsp": "^3.1.0",
     "source-map-support": "^0.5.0",
